<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021 Nazar Rusnak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">NUZP Helper</string>

    <string name="first_class">1st class 08:30 – 09:50</string>
    <string name="second_class">2nd class 10:05 – 11:25</string>
    <string name="third_class">3rd class 11:55 – 13:15</string>
    <string name="fourth_class">4th class 13:25 – 14:45</string>
    <string name="fifth_class">5th class 14:55 – 16:15</string>
    <string name="sixth_class">6th class 16:45 – 18:05</string>
    <string name="seventh_class">7th class 18:15 – 19:35</string>
    <string name="eighth_class">8th class 19:45 – 21:05</string>
    <string name="time_left_class">Until the end of the class:</string>
    <string name="time_left_break">Until the end of the break:</string>
    <string name="classes_end">All classes have ended for today</string>
    <string name="schedule_title">Schedule</string>
    <string name="day_schedule">Day Schedule</string>
    <string name="class_schedule">Class Schedule</string>

    <!-- Class schedule -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="numerator">Numerator</string>
    <string name="denominator">Denominator</string>
    <string name="classroom">Classroom</string>
    <string name="class_name">Class name</string>
    <string name="classroom_search_hint">Enter classroom number</string>
    <string name="classroom_search_title">Classrooms</string>
    <string name="classroom_num">Classroom: %1$s</string>
    <string name="university_building_num">University building: %1$s</string>
    <string name="floor_num">Floor: %1$s</string>
    <string name="class_search_error">Couldn\'t find specified classroom</string>
    <string name="text_to_share">Classroom %1$s is located in building %2$s at %3$s floor</string>
    <string name="share">Share</string>
    <string name="phonebook_title">Phone Book</string>
    <string name="phone_book_subscriber">Subscriber:</string>
    <string name="phone_book_name">Name:</string>
    <string name="phone_book_city_number">City Number:</string>
    <string name="phone_book_local_number">Local Number:</string>
    <string name="phone_book_room_building">Room (building):</string>
    <string name="connection_error">Unable to download phone book.\nCheck your internet connection…</string>
    <string name="try_again">Try again</string>
    <string name="progress">Working hard…</string>
    <string name="search">Search</string>
    <string name="help">help</string>
    <string name="phone_book_disclaimer">All data on the phone book page extracted from https://zp.edu.ua/spisok-telefoniv-strukturnih-pidrozdiliv-universitetu. Developer of the application is not responsible for the obsolescence or inaccuracy of this data.</string>
    <string name="phone_book_disclaimer_title">Information about the phone book data</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="system_theme">Follow system</string>
    <string name="developer_name" translatable="false">HarukeyUA</string>
    <string name="developer_title">Developer</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="designer_name" translatable="false">atimohov</string>
    <string name="designer_title">Designer</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="developers_section_title">Developers</string>
    <string name="settings_title">Settings</string>
    <string name="schedule_settings_title">Schedule settings</string>
    <string name="schedule_nav_title">Schedule</string>
    <string name="classroom_search_nav_title">Classrooms</string>
    <string name="phone_book_nav_title">Phone Book</string>
    <string name="settings_nav_title">Settings</string>
    <string name="theme_settings_title">App theme</string>
    <string name="theme_settings_detail">Change app theme to light, dark or make it to follow system theme</string>
    <string name="theme_settings">Theme settings</string>
    <string name="date_sync_title">Sync with current date</string>
    <string name="date_sync_detail">By default open schedule tab corresponding to current date</string>
    <string name="nothing_found">Nothing found :(</string>
</resources>
