<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021 Nazar Rusnak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="ViewModel"
            type="com.harukey.zpnuhelper.daySchedule.classSchedule.ClassScheduleViewModel" />

        <variable
            name="ClassIndex"
            type="Integer" />

        <variable
            name="classScheduleItem"
            type="com.harukey.zpnuhelper.daySchedule.classSchedule.db.ClassScheduleItem" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="vertical">

        <TextView
            classIndex="@{ClassIndex}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="@color/inactiveElementColor"
            android:textSize="12sp"
            tools:text="@string/fifth_class" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/classNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:hint="@string/class_name"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{classScheduleItem.className}" />

            <EditText
                android:id="@+id/classNumEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:hint="@string/classroom"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{classScheduleItem.classNum}" />

        </LinearLayout>
    </LinearLayout>
</layout>